--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1," />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <title>Spooky Ghost</title>
 
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <div id="container">
         <div id="spooky">
             <div id="body">
